<resources>
    <string name="app_name">Zaigle Doctor</string>
    <string name="heart_rate">heart rate</string>
    <string name="body_fat">Body fat</string>
    <string name="oxygen_saturation">Oxygen saturation</string>
    <string name="stress">stress</string>
    <string name="respiratory_rate">Respiratory rate</string>
    <string name="pace_counters">pace counters</string>
    <string name="gender">gender</string>
    <string name="man">man</string>
    <string name="woman">woman</string>
    <string name="birth_data">birth data</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="age">age</string>
    <string name="confirm">confirm</string>
    <string name="korean">한국어</string>
    <string name="english">영어</string>
    <string name="japanese">일본어</string>
    <string name="chinese">중국어</string>
    <string name="name">이름</string>
    <string name="input_name">이름을 입력해주세요.</string>
    <string name="input_birth">출생년도를 입력해주세요.</string>
    <string name="input_height">신장을 입력해주세요.</string>
    <string name="input_weight">몸무게를 입력해주세요.</string>
    <string name="join_membership">회원가입</string>


    <string name="guest_test">게스트 측정</string>
    <string name="living_history">생활 이력 입력</string>
    <string name="user_setting">사용자 설정</string>
    <string name="user_info">사용자 정보</string>
    <string name="language">Language</string>
    <string name="about">Information</string>
    <string name="qna">Q <![CDATA["&"]]>A</string>
    <string name="vsersion">Version</string>


    <string name="current_vsersion">현재버전</string>
    <string name="latest_vsersion">최신버전</string>
    <string name="language_set">한국어</string>



    <string name="feature_name">BLINKY</string>
    <string name="unknown_device">Unknown Device</string>

    <string name="rationale_title">Permission required</string>
    <string name="rationale_location_permission_denied">Starting scanning failed. Access denied.</string>
    <string name="rationale_location_message">From Android 6.0 Marshmallow onwards the system requires access to device\'s location in order to scan for Bluetooth Smart devices.
      \n\nBluetooth beacons, like iBeacons or Eddystone beacons, may be used to determine the phone\'s and user\'s location, However <b>nRF Blinky</b> will not be using device location information for any purpose.</string>
    <string name="rationale_location_cancel_message">Please turn on location services from the locations settings manually.</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="action_settings">Settings</string>
    <string name="action_start_scan">Start Scan</string>
    <string name="action_stop_scan">Stop Scan</string>
    <string name="action_connect">CONNECT</string>
    <string name="action_disconnect">DISCONNECT</string>
    <string name="turn_on">ON</string>
    <string name="turn_off">OFF</string>
    <string name="ble_not_supported">This device does not support Bluetooth Smart!</string>
    <string name="please_connect">Please connect to device first!</string>
    <string name="error_msg" formatted="false">%s (error %d)</string>
    <string name="connect_device">connected</string>
    <string name="connecting_device">Connecting.....</string>
</resources>
