<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <include
        android:id="@+id/top"
        layout="@layout/main_top_view"
        android:layout_height="100dp"
        android:layout_width="match_parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:backgroundTint="#000000"
                android:text="@string/korean" />

            <RadioButton
                android:id="@+id/option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:backgroundTint="#000000"
                android:text="@string/english" />

            <RadioButton
                android:id="@+id/option3"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:backgroundTint="#000000"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/japanese" />
            <RadioButton
                android:id="@+id/option4"
                android:backgroundTint="#000000"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/chinese" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>