<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <LinearLayout
            android:id="@+id/heart_rate"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/main_back"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="2.5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="#000000"
                android:text="@string/heart_rate"
                />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Body_fat"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/main_back"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:text="@string/body_fat"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <LinearLayout
            android:id="@+id/Oxygen_saturation"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/main_back"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="2.5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:text="@string/oxygen_saturation"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stress"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/main_back"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginLeft="2.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:text="@string/stress"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <LinearLayout
            android:id="@+id/Respiratory_rate"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/main_back"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="2.5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:text="@string/respiratory_rate"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pace_counters"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/main_back"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginLeft="2.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:text="@string/pace_counters"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>




</LinearLayout>